--- a/geojson-line.html
+++ b/geojson-line.html
@@ -18,7 +18,7 @@
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v11',
-        center: [-122.486052, 37.830348],
+        center: [110.387131,1.581635],
         zoom: 15
     });
 
@@ -31,27 +31,106 @@
                 'geometry': {
                     'type': 'LineString',
                     'coordinates': [
-                        [-122.48369693756104, 37.83381888486939],
-                        [-122.48348236083984, 37.83317489144141],
-                        [-122.48339653015138, 37.83270036637107],
-                        [-122.48356819152832, 37.832056363179625],
-                        [-122.48404026031496, 37.83114119107971],
-                        [-122.48404026031496, 37.83049717427869],
-                        [-122.48348236083984, 37.829920943955045],
-                        [-122.48356819152832, 37.82954808664175],
-                        [-122.48507022857666, 37.82944639795659],
-                        [-122.48610019683838, 37.82880236636284],
-                        [-122.48695850372314, 37.82931081282506],
-                        [-122.48700141906738, 37.83080223556934],
-                        [-122.48751640319824, 37.83168351665737],
-                        [-122.48803138732912, 37.832158048267786],
-                        [-122.48888969421387, 37.83297152392784],
-                        [-122.48987674713133, 37.83263257682617],
-                        [-122.49043464660643, 37.832937629287755],
-                        [-122.49125003814696, 37.832429207817725],
-                        [-122.49163627624512, 37.832564787218985],
-                        [-122.49223709106445, 37.83337825839438],
-                        [-122.49378204345702, 37.83368330777276]
+											[110.387131,1.581635],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581633],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581634],
+											[110.38713,1.581633],
+											[110.38713,1.581633],
+											[110.387131,1.581631],
+											[110.385304,1.581533],
+											[110.385304,1.581533],
+											[110.385305,1.581533],
+											[110.385305,1.581532],
+											[110.385305,1.581532],
+											[110.385306,1.581532],
+											[110.384104,1.581451],
+											[110.383122,1.581394],
+											[110.382364,1.581585],
+											[110.381756,1.581298],
+											[110.380182,1.581222],
+											[110.37935,1.581204],
+											[110.37935,1.581205],
+											[110.37935,1.581204],
+											[110.37935,1.581204],
+											[110.37902,1.581176],
+											[110.378696,1.580914],
+											[110.379338,1.580802],
+											[110.379614,1.580737],
+											[110.379711,1.580191],
+											[110.379603,1.579592],
+											[110.379604,1.579591],
+											[110.379608,1.579592],
+											[110.379608,1.579592],
+											[110.379551,1.579553],
+											[110.379068,1.579247],
+											[110.378715,1.57965],
+											[110.37886,1.580023],
+											[110.378902,1.580089],
+											[110.378902,1.580089],
+											[110.378902,1.580089],
+											[110.37864,1.580489],
+											[110.37742,1.580519],
+											[110.375952,1.580485],
+											[110.375022,1.58027],
+											[110.374314,1.580231],
+											[110.373399,1.580341],
+											[110.372564,1.580328],
+											[110.37217,1.58041],
+											[110.371626,1.580486],
+											[110.371627,1.580486],
+											[110.371627,1.580486],
+											[110.371627,1.580486],
+											[110.371627,1.580486],
+											[110.371627,1.580486],
+											[110.371627,1.580486],
+											[110.37158,1.580515],
+											[110.371135,1.580101],
+											[110.371126,1.579336],
+											[110.370858,1.578866],
+											[110.370643,1.578548],
+											[110.370248,1.578595],
+											[110.370441,1.579278],
+											[110.370296,1.580572],
+											[110.370885,1.581555],
+											[110.372068,1.581108],
+											[110.373764,1.580902],
+											[110.375494,1.580729],
+											[110.377518,1.580709],
+											[110.379377,1.580816],
+											[110.380575,1.58116],
+											[110.380373,1.581902],
+											[110.379951,1.582094],
+											[110.379961,1.582096],
+											[110.379962,1.582083],
+											[110.379963,1.582077],
+											[110.379964,1.582078],
+											[110.379963,1.582078],
+											[110.379961,1.582171],
+											[110.379936,1.582797],
+											[110.38028,1.583031],
+											[110.380901,1.583264],
+											[110.381505,1.58364],
+											[110.382042,1.58404],
+											[110.383004,1.5843],
+											[110.383018,1.584294],
+											[110.383018,1.584295],
+											[110.383018,1.584295],
+											[110.383018,1.584295],
+											[110.383018,1.584295],
+											[110.383017,1.584295],
+											[110.383087,1.584228],
+											[110.383395,1.583955],
+											[110.383897,1.583597],
+											[110.384397,1.583338],
+											[110.38442,1.583]
                     ]
                 }
             }
