--- a/reversegeo.html
+++ b/reversegeo.html
@@ -8,8 +8,14 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 100%;
+        width: 100%;
+        height:30%;
       }
+      #map_s1 {
+        width: 100%;
+        height:30%;
+      }
+  
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
@@ -43,42 +49,65 @@
       #latlng {
         width: 225px;
       }
+
+
     </style>
   </head>
   <body>
     <div id="floating-panel">
-      <input id="latlng" type="text" value="40.714224,-73.961452">
+      <input id="latlng" type="text" value="1.588,110.388">
       <input id="submit" type="button" value="Reverse Geocode">
     </div>
-    <div id="map"></div>
+    <div id="map_s1"></div>
+
+
+
     <script>
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 8,
-          center: {lat: 40.731, lng: -73.997}
+      // function initMap() {
+      //   var map = new google.maps.Map(document.getElementById('map'), {
+      //     zoom: 12,
+      //     center: {lat: 1.588, lng: 110.388}
+      //   });
+      //   var geocoder = new google.maps.Geocoder;
+      //   var infowindow = new google.maps.InfoWindow;
+      //
+      //   document.getElementById('submit').addEventListener('click', function() {
+      //     geocodeLatLng(geocoder, map, infowindow);
+      //   });
+      // }
+
+      function initMapS1() {
+        var map_s1 = new google.maps.Map(document.getElementById('map_s1'), {
+          zoom: 12,
+          center: {lat: 1.688, lng: 110.488}
         });
         var geocoder = new google.maps.Geocoder;
         var infowindow = new google.maps.InfoWindow;
 
         document.getElementById('submit').addEventListener('click', function() {
-          geocodeLatLng(geocoder, map, infowindow);
+          geocodeLatLng(geocoder, map_s1, infowindow);
         });
       }
 
-      function geocodeLatLng(geocoder, map, infowindow) {
+
+
+      function geocodeLatLng(geocoder, map_s1, infowindow) {
+        //https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBGvn5IKpL8dpo8DPl_kx-Xc4VGWIu86Dw&latlng=45.4215296%2C+-75.697193&sensor=false&language=
+        // example url for reverse geocoding 1.588,110.388
+        // https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBGvn5IKpL8dpo8DPl_kx-Xc4VGWIu86Dw&latlng=1.588%2C+110.388&sensor=false&language=
         var input = document.getElementById('latlng').value;
         var latlngStr = input.split(',', 2);
         var latlng = {lat: parseFloat(latlngStr[0]), lng: parseFloat(latlngStr[1])};
         geocoder.geocode({'location': latlng}, function(results, status) {
           if (status === 'OK') {
             if (results[0]) {
-              map.setZoom(11);
+              map_s1.setZoom(11);
               var marker = new google.maps.Marker({
                 position: latlng,
-                map: map
+                map: map_s1
               });
               infowindow.setContent(results[0].formatted_address);
-              infowindow.open(map, marker);
+              infowindow.open(map_s1, marker);
               console.log(results[0].formatted_address);
             } else {
               window.alert('No results found');
@@ -89,13 +118,16 @@
         });
       }
     </script>
+
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGvn5IKpL8dpo8DPl_kx-Xc4VGWIu86Dw&callback=initMap">
-//https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBGvn5IKpL8dpo8DPl_kx-Xc4VGWIu86Dw&latlng=45.4215296%2C+-75.697193&sensor=false&language=
-
-// example url for reverse geocoding 1.588,110.388
-// https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBGvn5IKpL8dpo8DPl_kx-Xc4VGWIu86Dw&latlng=1.588%2C+110.388&sensor=false&language=
-
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPs0zyqafpz7bQ4tvqCIhtxaadZomWe78&callback=initMapS1">
     </script>
+
+    <!-- <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqCtFWYMcWVKjuU9rme3wJ1GrCPyL2MS4&callback=initMap">
+    </script> -->
+
+
+
   </body>
 </html>
